// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform-content returns the correct html from AsciiDoc for .adoc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.adoc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a { color: #337ab7; text-decoration: none; }

.content h1 { font-size: 2.2rem; font-weight: 500; margin: 20px 0 10px; }
.content h2 { font-size: 1.8rem; font-weight: 500; margin: 20px 0 10px; }
.content h3 { font-size: 1.5rem; font-weight: 500; margin: 20px 0 10px; }

.content ul {
  display: block; list-style-type: disc;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px; margin-bottom: 10px;
}
.content ol {
  list-style-type: decimal; display: block;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p { margin-bottom: 10px; }

.content img { display: block; max-width: 100%; height: auto; vertical-align: middle; }
.content strong { font-weight: 700; }
.content em { font-style: italic; }

.content blockquote {
  padding: 10px 20px; margin: 0 0 20px; font-size: 17.5px; border-left: 5px solid #eee;
}
.content blockquote p:last-child { margin-bottom: 0; }

.content hr { margin: 20px 0; border: 0; border-top: 1px solid #949494; }

/* ---- Code blocks / inline code ---- */
.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.4;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  overflow-x: auto;
  tab-size: 2;
}
.content code { font-family: Menlo,Monaco,Consolas,"Courier New",monospace; }
.content pre code {
  padding: 0;
  font-size: inherit;
  background-color: transparent;
  border-radius: 0;
  display: block;
}
.content pre code:not(.hljs) { color: #333; } /* fallback before hljs runs */

/* Inline code: neutral unless hljs has themed it */
.content :not(pre) code {
  padding: 2px 4px;
  font-size: 90%;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  border-radius: 4px;
}

/* Default colour/background only if hljs hasn't themed it */
/* The colors of this were wierd before, now they are standard */
.content :not(pre) code:not([class*="language-"]) {
  color: #222222;
  background-color: #F1F1F1;
}

/* Links inside inline code: use link colour */
.content a code {
  color: 337AB7 !important; /* let link be a link colour */
}

/* ---- Tables ---- */
.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}
.content th {
  text-align: left; vertical-align: bottom; border-bottom: 2px solid #ddd;
  font-weight: bold; font-size: 1.2rem; padding: 8px; line-height: 1.42857143;
}
.content td {
  padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd;
}

/* ---- Diff block ---- */
.diff-block .diff-add { background-color: #e6ffed; display: block; white-space: pre; }
.diff-block .diff-remove { background-color: #ffeef0; display: block; white-space: pre; }
.diff-block .diff-neutral { display: block; white-space: pre; }

/* ---- Alerts ---- */
.markdown-alert { padding: .5rem 1rem; margin-bottom: 16px; border-left: .25em solid; border-radius: 6px; background-color: var(--alert-bg, #f6f8fa);}
.markdown-alert p { margin: .5em 0; }
.markdown-alert-title { font-weight: 600; display: flex; align-items: center; margin-bottom: .25rem; color: normal !important; }
.markdown-alert-title svg { margin-right: .5rem; flex-shrink: 0; }

.markdown-alert-note { border-color: #0969da; --alert-bg: #ddf4ff; }
.markdown-alert-tip { border-color: #1a7f37; --alert-bg: #dafbe1; }
.markdown-alert-important { border-color: #8250df; --alert-bg: #fbefff; }
.markdown-alert-warning { border-color: #9a6700; --alert-bg: #fff8c5; }
.markdown-alert-caution { border-color: #cf222e; --alert-bg: #ffebe9; }

.markdown-alert-note    { color: #0969da; }
.markdown-alert-tip     { color: #1a7f37; }
.markdown-alert-important { color: #8250df; }
.markdown-alert-warning { color: #9a6700; }
.markdown-alert-caution { color: #d1242f; }

/* ---- Anchor links ---- */
.heading-anchor { position: relative; }
.heading-anchor .anchor-link {
  position: absolute; left: -24px; top: 50%; transform: translateY(-50%);
  opacity: 0; transition: opacity .15s ease-in-out; color: #000; text-decoration: none;
}
.anchor-icon { display: block; width: 16px; height: 16px; fill: currentColor; }
.heading-anchor:hover .anchor-link { opacity: 1; }
    </style>
    <link rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/styles/github.min.css"
    >
    <script defer
            src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
    >
    </script>
    <script defer>
      (function () {
  function normalizeLanguageClasses(el) {
    // Ensure all code blocks have a "language-..." class
    for (const cls of Array.from(el.classList)) {
      if (!cls.startsWith('language-') && /^[a-z0-9_+-]+$/i.test(cls)) {
        el.classList.add('language-' + cls.toLowerCase());
      }
    }
  }

  function collectRequestedLanguages() {
    // Gather unique languages used in the document
    const set = new Set();
    document.querySelectorAll('pre code').forEach(function (el) {
      normalizeLanguageClasses(el);
      const classes = Array.from(el.classList);
      const langClass = classes.find(c => c.startsWith('language-'));
      if (!langClass) return;
      let name = langClass.replace(/^language-/, '').toLowerCase();
      name = name.replace(/-diff$/, '').replace(/^diff-/, '');
      if (name && name !== 'diff') set.add(name);
    });
    return Array.from(set);
  }

  function loadLanguage(name) {
    // Dynamically load a highlight.js language pack
    return new Promise(function (resolve) {
      if (window.hljs && window.hljs.getLanguage && window.hljs.getLanguage(name)) {
        return resolve();
      }
      const script = document.createElement('script');
      script.src = 'https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/languages/' + name + '.min.js';
      script.async = true;
      script.onload = function () { resolve(); };
      script.onerror = function () { resolve(); };
      document.head.appendChild(script);
    });
  }

  function highlightAll() {
    // Apply syntax highlighting to all code blocks
    if (!window.hljs) return;
    if (window.hljs.configure) {
      window.hljs.configure({ ignoreUnescapedHTML: true });
    }
    document.querySelectorAll('pre code').forEach(function (el) {
      try { window.hljs.highlightElement(el); } catch (e) {}
    });
  }

  window.addEventListener('DOMContentLoaded', function () {
    if (!window.hljs) return;
    const langs = collectRequestedLanguages();
    Promise.all(langs.map(loadLanguage)).then(highlightAll);
  });
})();
    </script>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.adoc"
              >
                file-name.adoc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="sect1">
          <h2 id="_title_of_simple_content_adoc">
            Title of simple-content.adoc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      April
      2020
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for .asc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a { color: #337ab7; text-decoration: none; }

.content h1 { font-size: 2.2rem; font-weight: 500; margin: 20px 0 10px; }
.content h2 { font-size: 1.8rem; font-weight: 500; margin: 20px 0 10px; }
.content h3 { font-size: 1.5rem; font-weight: 500; margin: 20px 0 10px; }

.content ul {
  display: block; list-style-type: disc;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px; margin-bottom: 10px;
}
.content ol {
  list-style-type: decimal; display: block;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p { margin-bottom: 10px; }

.content img { display: block; max-width: 100%; height: auto; vertical-align: middle; }
.content strong { font-weight: 700; }
.content em { font-style: italic; }

.content blockquote {
  padding: 10px 20px; margin: 0 0 20px; font-size: 17.5px; border-left: 5px solid #eee;
}
.content blockquote p:last-child { margin-bottom: 0; }

.content hr { margin: 20px 0; border: 0; border-top: 1px solid #949494; }

/* ---- Code blocks / inline code ---- */
.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.4;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  overflow-x: auto;
  tab-size: 2;
}
.content code { font-family: Menlo,Monaco,Consolas,"Courier New",monospace; }
.content pre code {
  padding: 0;
  font-size: inherit;
  background-color: transparent;
  border-radius: 0;
  display: block;
}
.content pre code:not(.hljs) { color: #333; } /* fallback before hljs runs */

/* Inline code: neutral unless hljs has themed it */
.content :not(pre) code {
  padding: 2px 4px;
  font-size: 90%;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  border-radius: 4px;
}

/* Default colour/background only if hljs hasn't themed it */
/* The colors of this were wierd before, now they are standard */
.content :not(pre) code:not([class*="language-"]) {
  color: #222222;
  background-color: #F1F1F1;
}

/* Links inside inline code: use link colour */
.content a code {
  color: 337AB7 !important; /* let link be a link colour */
}

/* ---- Tables ---- */
.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}
.content th {
  text-align: left; vertical-align: bottom; border-bottom: 2px solid #ddd;
  font-weight: bold; font-size: 1.2rem; padding: 8px; line-height: 1.42857143;
}
.content td {
  padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd;
}

/* ---- Diff block ---- */
.diff-block .diff-add { background-color: #e6ffed; display: block; white-space: pre; }
.diff-block .diff-remove { background-color: #ffeef0; display: block; white-space: pre; }
.diff-block .diff-neutral { display: block; white-space: pre; }

/* ---- Alerts ---- */
.markdown-alert { padding: .5rem 1rem; margin-bottom: 16px; border-left: .25em solid; border-radius: 6px; background-color: var(--alert-bg, #f6f8fa);}
.markdown-alert p { margin: .5em 0; }
.markdown-alert-title { font-weight: 600; display: flex; align-items: center; margin-bottom: .25rem; color: normal !important; }
.markdown-alert-title svg { margin-right: .5rem; flex-shrink: 0; }

.markdown-alert-note { border-color: #0969da; --alert-bg: #ddf4ff; }
.markdown-alert-tip { border-color: #1a7f37; --alert-bg: #dafbe1; }
.markdown-alert-important { border-color: #8250df; --alert-bg: #fbefff; }
.markdown-alert-warning { border-color: #9a6700; --alert-bg: #fff8c5; }
.markdown-alert-caution { border-color: #cf222e; --alert-bg: #ffebe9; }

.markdown-alert-note    { color: #0969da; }
.markdown-alert-tip     { color: #1a7f37; }
.markdown-alert-important { color: #8250df; }
.markdown-alert-warning { color: #9a6700; }
.markdown-alert-caution { color: #d1242f; }

/* ---- Anchor links ---- */
.heading-anchor { position: relative; }
.heading-anchor .anchor-link {
  position: absolute; left: -24px; top: 50%; transform: translateY(-50%);
  opacity: 0; transition: opacity .15s ease-in-out; color: #000; text-decoration: none;
}
.anchor-icon { display: block; width: 16px; height: 16px; fill: currentColor; }
.heading-anchor:hover .anchor-link { opacity: 1; }
    </style>
    <link rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/styles/github.min.css"
    >
    <script defer
            src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
    >
    </script>
    <script defer>
      (function () {
  function normalizeLanguageClasses(el) {
    // Ensure all code blocks have a "language-..." class
    for (const cls of Array.from(el.classList)) {
      if (!cls.startsWith('language-') && /^[a-z0-9_+-]+$/i.test(cls)) {
        el.classList.add('language-' + cls.toLowerCase());
      }
    }
  }

  function collectRequestedLanguages() {
    // Gather unique languages used in the document
    const set = new Set();
    document.querySelectorAll('pre code').forEach(function (el) {
      normalizeLanguageClasses(el);
      const classes = Array.from(el.classList);
      const langClass = classes.find(c => c.startsWith('language-'));
      if (!langClass) return;
      let name = langClass.replace(/^language-/, '').toLowerCase();
      name = name.replace(/-diff$/, '').replace(/^diff-/, '');
      if (name && name !== 'diff') set.add(name);
    });
    return Array.from(set);
  }

  function loadLanguage(name) {
    // Dynamically load a highlight.js language pack
    return new Promise(function (resolve) {
      if (window.hljs && window.hljs.getLanguage && window.hljs.getLanguage(name)) {
        return resolve();
      }
      const script = document.createElement('script');
      script.src = 'https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/languages/' + name + '.min.js';
      script.async = true;
      script.onload = function () { resolve(); };
      script.onerror = function () { resolve(); };
      document.head.appendChild(script);
    });
  }

  function highlightAll() {
    // Apply syntax highlighting to all code blocks
    if (!window.hljs) return;
    if (window.hljs.configure) {
      window.hljs.configure({ ignoreUnescapedHTML: true });
    }
    document.querySelectorAll('pre code').forEach(function (el) {
      try { window.hljs.highlightElement(el); } catch (e) {}
    });
  }

  window.addEventListener('DOMContentLoaded', function () {
    if (!window.hljs) return;
    const langs = collectRequestedLanguages();
    Promise.all(langs.map(loadLanguage)).then(highlightAll);
  });
})();
    </script>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.asc"
              >
                file-name.asc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="sect1">
          <h2 id="_title_of_simple_content_asc">
            Title of simple-content.asc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      April
      2020
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for .asciidoc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asciidoc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a { color: #337ab7; text-decoration: none; }

.content h1 { font-size: 2.2rem; font-weight: 500; margin: 20px 0 10px; }
.content h2 { font-size: 1.8rem; font-weight: 500; margin: 20px 0 10px; }
.content h3 { font-size: 1.5rem; font-weight: 500; margin: 20px 0 10px; }

.content ul {
  display: block; list-style-type: disc;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px; margin-bottom: 10px;
}
.content ol {
  list-style-type: decimal; display: block;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p { margin-bottom: 10px; }

.content img { display: block; max-width: 100%; height: auto; vertical-align: middle; }
.content strong { font-weight: 700; }
.content em { font-style: italic; }

.content blockquote {
  padding: 10px 20px; margin: 0 0 20px; font-size: 17.5px; border-left: 5px solid #eee;
}
.content blockquote p:last-child { margin-bottom: 0; }

.content hr { margin: 20px 0; border: 0; border-top: 1px solid #949494; }

/* ---- Code blocks / inline code ---- */
.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.4;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  overflow-x: auto;
  tab-size: 2;
}
.content code { font-family: Menlo,Monaco,Consolas,"Courier New",monospace; }
.content pre code {
  padding: 0;
  font-size: inherit;
  background-color: transparent;
  border-radius: 0;
  display: block;
}
.content pre code:not(.hljs) { color: #333; } /* fallback before hljs runs */

/* Inline code: neutral unless hljs has themed it */
.content :not(pre) code {
  padding: 2px 4px;
  font-size: 90%;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  border-radius: 4px;
}

/* Default colour/background only if hljs hasn't themed it */
/* The colors of this were wierd before, now they are standard */
.content :not(pre) code:not([class*="language-"]) {
  color: #222222;
  background-color: #F1F1F1;
}

/* Links inside inline code: use link colour */
.content a code {
  color: 337AB7 !important; /* let link be a link colour */
}

/* ---- Tables ---- */
.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}
.content th {
  text-align: left; vertical-align: bottom; border-bottom: 2px solid #ddd;
  font-weight: bold; font-size: 1.2rem; padding: 8px; line-height: 1.42857143;
}
.content td {
  padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd;
}

/* ---- Diff block ---- */
.diff-block .diff-add { background-color: #e6ffed; display: block; white-space: pre; }
.diff-block .diff-remove { background-color: #ffeef0; display: block; white-space: pre; }
.diff-block .diff-neutral { display: block; white-space: pre; }

/* ---- Alerts ---- */
.markdown-alert { padding: .5rem 1rem; margin-bottom: 16px; border-left: .25em solid; border-radius: 6px; background-color: var(--alert-bg, #f6f8fa);}
.markdown-alert p { margin: .5em 0; }
.markdown-alert-title { font-weight: 600; display: flex; align-items: center; margin-bottom: .25rem; color: normal !important; }
.markdown-alert-title svg { margin-right: .5rem; flex-shrink: 0; }

.markdown-alert-note { border-color: #0969da; --alert-bg: #ddf4ff; }
.markdown-alert-tip { border-color: #1a7f37; --alert-bg: #dafbe1; }
.markdown-alert-important { border-color: #8250df; --alert-bg: #fbefff; }
.markdown-alert-warning { border-color: #9a6700; --alert-bg: #fff8c5; }
.markdown-alert-caution { border-color: #cf222e; --alert-bg: #ffebe9; }

.markdown-alert-note    { color: #0969da; }
.markdown-alert-tip     { color: #1a7f37; }
.markdown-alert-important { color: #8250df; }
.markdown-alert-warning { color: #9a6700; }
.markdown-alert-caution { color: #d1242f; }

/* ---- Anchor links ---- */
.heading-anchor { position: relative; }
.heading-anchor .anchor-link {
  position: absolute; left: -24px; top: 50%; transform: translateY(-50%);
  opacity: 0; transition: opacity .15s ease-in-out; color: #000; text-decoration: none;
}
.anchor-icon { display: block; width: 16px; height: 16px; fill: currentColor; }
.heading-anchor:hover .anchor-link { opacity: 1; }
    </style>
    <link rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/styles/github.min.css"
    >
    <script defer
            src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
    >
    </script>
    <script defer>
      (function () {
  function normalizeLanguageClasses(el) {
    // Ensure all code blocks have a "language-..." class
    for (const cls of Array.from(el.classList)) {
      if (!cls.startsWith('language-') && /^[a-z0-9_+-]+$/i.test(cls)) {
        el.classList.add('language-' + cls.toLowerCase());
      }
    }
  }

  function collectRequestedLanguages() {
    // Gather unique languages used in the document
    const set = new Set();
    document.querySelectorAll('pre code').forEach(function (el) {
      normalizeLanguageClasses(el);
      const classes = Array.from(el.classList);
      const langClass = classes.find(c => c.startsWith('language-'));
      if (!langClass) return;
      let name = langClass.replace(/^language-/, '').toLowerCase();
      name = name.replace(/-diff$/, '').replace(/^diff-/, '');
      if (name && name !== 'diff') set.add(name);
    });
    return Array.from(set);
  }

  function loadLanguage(name) {
    // Dynamically load a highlight.js language pack
    return new Promise(function (resolve) {
      if (window.hljs && window.hljs.getLanguage && window.hljs.getLanguage(name)) {
        return resolve();
      }
      const script = document.createElement('script');
      script.src = 'https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/languages/' + name + '.min.js';
      script.async = true;
      script.onload = function () { resolve(); };
      script.onerror = function () { resolve(); };
      document.head.appendChild(script);
    });
  }

  function highlightAll() {
    // Apply syntax highlighting to all code blocks
    if (!window.hljs) return;
    if (window.hljs.configure) {
      window.hljs.configure({ ignoreUnescapedHTML: true });
    }
    document.querySelectorAll('pre code').forEach(function (el) {
      try { window.hljs.highlightElement(el); } catch (e) {}
    });
  }

  window.addEventListener('DOMContentLoaded', function () {
    if (!window.hljs) return;
    const langs = collectRequestedLanguages();
    Promise.all(langs.map(loadLanguage)).then(highlightAll);
  });
})();
    </script>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.asciidoc"
              >
                file-name.asciidoc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="sect1">
          <h2 id="_title_of_simple_content_asciidoc">
            Title of simple-content.asciidoc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      April
      2020
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asciidoc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a { color: #337ab7; text-decoration: none; }

.content h1 { font-size: 2.2rem; font-weight: 500; margin: 20px 0 10px; }
.content h2 { font-size: 1.8rem; font-weight: 500; margin: 20px 0 10px; }
.content h3 { font-size: 1.5rem; font-weight: 500; margin: 20px 0 10px; }

.content ul {
  display: block; list-style-type: disc;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px; margin-bottom: 10px;
}
.content ol {
  list-style-type: decimal; display: block;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p { margin-bottom: 10px; }

.content img { display: block; max-width: 100%; height: auto; vertical-align: middle; }
.content strong { font-weight: 700; }
.content em { font-style: italic; }

.content blockquote {
  padding: 10px 20px; margin: 0 0 20px; font-size: 17.5px; border-left: 5px solid #eee;
}
.content blockquote p:last-child { margin-bottom: 0; }

.content hr { margin: 20px 0; border: 0; border-top: 1px solid #949494; }

/* ---- Code blocks / inline code ---- */
.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.4;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  overflow-x: auto;
  tab-size: 2;
}
.content code { font-family: Menlo,Monaco,Consolas,"Courier New",monospace; }
.content pre code {
  padding: 0;
  font-size: inherit;
  background-color: transparent;
  border-radius: 0;
  display: block;
}
.content pre code:not(.hljs) { color: #333; } /* fallback before hljs runs */

/* Inline code: neutral unless hljs has themed it */
.content :not(pre) code {
  padding: 2px 4px;
  font-size: 90%;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  border-radius: 4px;
}

/* Default colour/background only if hljs hasn't themed it */
/* The colors of this were wierd before, now they are standard */
.content :not(pre) code:not([class*="language-"]) {
  color: #222222;
  background-color: #F1F1F1;
}

/* Links inside inline code: use link colour */
.content a code {
  color: 337AB7 !important; /* let link be a link colour */
}

/* ---- Tables ---- */
.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}
.content th {
  text-align: left; vertical-align: bottom; border-bottom: 2px solid #ddd;
  font-weight: bold; font-size: 1.2rem; padding: 8px; line-height: 1.42857143;
}
.content td {
  padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd;
}

/* ---- Diff block ---- */
.diff-block .diff-add { background-color: #e6ffed; display: block; white-space: pre; }
.diff-block .diff-remove { background-color: #ffeef0; display: block; white-space: pre; }
.diff-block .diff-neutral { display: block; white-space: pre; }

/* ---- Alerts ---- */
.markdown-alert { padding: .5rem 1rem; margin-bottom: 16px; border-left: .25em solid; border-radius: 6px; background-color: var(--alert-bg, #f6f8fa);}
.markdown-alert p { margin: .5em 0; }
.markdown-alert-title { font-weight: 600; display: flex; align-items: center; margin-bottom: .25rem; color: normal !important; }
.markdown-alert-title svg { margin-right: .5rem; flex-shrink: 0; }

.markdown-alert-note { border-color: #0969da; --alert-bg: #ddf4ff; }
.markdown-alert-tip { border-color: #1a7f37; --alert-bg: #dafbe1; }
.markdown-alert-important { border-color: #8250df; --alert-bg: #fbefff; }
.markdown-alert-warning { border-color: #9a6700; --alert-bg: #fff8c5; }
.markdown-alert-caution { border-color: #cf222e; --alert-bg: #ffebe9; }

.markdown-alert-note    { color: #0969da; }
.markdown-alert-tip     { color: #1a7f37; }
.markdown-alert-important { color: #8250df; }
.markdown-alert-warning { color: #9a6700; }
.markdown-alert-caution { color: #d1242f; }

/* ---- Anchor links ---- */
.heading-anchor { position: relative; }
.heading-anchor .anchor-link {
  position: absolute; left: -24px; top: 50%; transform: translateY(-50%);
  opacity: 0; transition: opacity .15s ease-in-out; color: #000; text-decoration: none;
}
.anchor-icon { display: block; width: 16px; height: 16px; fill: currentColor; }
.heading-anchor:hover .anchor-link { opacity: 1; }
    </style>
    <link rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/styles/github.min.css"
    >
    <script defer
            src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
    >
    </script>
    <script defer>
      (function () {
  function normalizeLanguageClasses(el) {
    // Ensure all code blocks have a "language-..." class
    for (const cls of Array.from(el.classList)) {
      if (!cls.startsWith('language-') && /^[a-z0-9_+-]+$/i.test(cls)) {
        el.classList.add('language-' + cls.toLowerCase());
      }
    }
  }

  function collectRequestedLanguages() {
    // Gather unique languages used in the document
    const set = new Set();
    document.querySelectorAll('pre code').forEach(function (el) {
      normalizeLanguageClasses(el);
      const classes = Array.from(el.classList);
      const langClass = classes.find(c => c.startsWith('language-'));
      if (!langClass) return;
      let name = langClass.replace(/^language-/, '').toLowerCase();
      name = name.replace(/-diff$/, '').replace(/^diff-/, '');
      if (name && name !== 'diff') set.add(name);
    });
    return Array.from(set);
  }

  function loadLanguage(name) {
    // Dynamically load a highlight.js language pack
    return new Promise(function (resolve) {
      if (window.hljs && window.hljs.getLanguage && window.hljs.getLanguage(name)) {
        return resolve();
      }
      const script = document.createElement('script');
      script.src = 'https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/languages/' + name + '.min.js';
      script.async = true;
      script.onload = function () { resolve(); };
      script.onerror = function () { resolve(); };
      document.head.appendChild(script);
    });
  }

  function highlightAll() {
    // Apply syntax highlighting to all code blocks
    if (!window.hljs) return;
    if (window.hljs.configure) {
      window.hljs.configure({ ignoreUnescapedHTML: true });
    }
    document.querySelectorAll('pre code').forEach(function (el) {
      try { window.hljs.highlightElement(el); } catch (e) {}
    });
  }

  window.addEventListener('DOMContentLoaded', function () {
    if (!window.hljs) return;
    const langs = collectRequestedLanguages();
    Promise.all(langs.map(loadLanguage)).then(highlightAll);
  });
})();
    </script>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.asciidoc"
              >
                file-name.asciidoc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="paragraph">
          <p>
            One line of plain text
          </p>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      April
      2020
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from markdown for Markdown with a title and links 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a { color: #337ab7; text-decoration: none; }

.content h1 { font-size: 2.2rem; font-weight: 500; margin: 20px 0 10px; }
.content h2 { font-size: 1.8rem; font-weight: 500; margin: 20px 0 10px; }
.content h3 { font-size: 1.5rem; font-weight: 500; margin: 20px 0 10px; }

.content ul {
  display: block; list-style-type: disc;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px; margin-bottom: 10px;
}
.content ol {
  list-style-type: decimal; display: block;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p { margin-bottom: 10px; }

.content img { display: block; max-width: 100%; height: auto; vertical-align: middle; }
.content strong { font-weight: 700; }
.content em { font-style: italic; }

.content blockquote {
  padding: 10px 20px; margin: 0 0 20px; font-size: 17.5px; border-left: 5px solid #eee;
}
.content blockquote p:last-child { margin-bottom: 0; }

.content hr { margin: 20px 0; border: 0; border-top: 1px solid #949494; }

/* ---- Code blocks / inline code ---- */
.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.4;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  overflow-x: auto;
  tab-size: 2;
}
.content code { font-family: Menlo,Monaco,Consolas,"Courier New",monospace; }
.content pre code {
  padding: 0;
  font-size: inherit;
  background-color: transparent;
  border-radius: 0;
  display: block;
}
.content pre code:not(.hljs) { color: #333; } /* fallback before hljs runs */

/* Inline code: neutral unless hljs has themed it */
.content :not(pre) code {
  padding: 2px 4px;
  font-size: 90%;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  border-radius: 4px;
}

/* Default colour/background only if hljs hasn't themed it */
/* The colors of this were wierd before, now they are standard */
.content :not(pre) code:not([class*="language-"]) {
  color: #222222;
  background-color: #F1F1F1;
}

/* Links inside inline code: use link colour */
.content a code {
  color: 337AB7 !important; /* let link be a link colour */
}

/* ---- Tables ---- */
.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}
.content th {
  text-align: left; vertical-align: bottom; border-bottom: 2px solid #ddd;
  font-weight: bold; font-size: 1.2rem; padding: 8px; line-height: 1.42857143;
}
.content td {
  padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd;
}

/* ---- Diff block ---- */
.diff-block .diff-add { background-color: #e6ffed; display: block; white-space: pre; }
.diff-block .diff-remove { background-color: #ffeef0; display: block; white-space: pre; }
.diff-block .diff-neutral { display: block; white-space: pre; }

/* ---- Alerts ---- */
.markdown-alert { padding: .5rem 1rem; margin-bottom: 16px; border-left: .25em solid; border-radius: 6px; background-color: var(--alert-bg, #f6f8fa);}
.markdown-alert p { margin: .5em 0; }
.markdown-alert-title { font-weight: 600; display: flex; align-items: center; margin-bottom: .25rem; color: normal !important; }
.markdown-alert-title svg { margin-right: .5rem; flex-shrink: 0; }

.markdown-alert-note { border-color: #0969da; --alert-bg: #ddf4ff; }
.markdown-alert-tip { border-color: #1a7f37; --alert-bg: #dafbe1; }
.markdown-alert-important { border-color: #8250df; --alert-bg: #fbefff; }
.markdown-alert-warning { border-color: #9a6700; --alert-bg: #fff8c5; }
.markdown-alert-caution { border-color: #cf222e; --alert-bg: #ffebe9; }

.markdown-alert-note    { color: #0969da; }
.markdown-alert-tip     { color: #1a7f37; }
.markdown-alert-important { color: #8250df; }
.markdown-alert-warning { color: #9a6700; }
.markdown-alert-caution { color: #d1242f; }

/* ---- Anchor links ---- */
.heading-anchor { position: relative; }
.heading-anchor .anchor-link {
  position: absolute; left: -24px; top: 50%; transform: translateY(-50%);
  opacity: 0; transition: opacity .15s ease-in-out; color: #000; text-decoration: none;
}
.anchor-icon { display: block; width: 16px; height: 16px; fill: currentColor; }
.heading-anchor:hover .anchor-link { opacity: 1; }
    </style>
    <link rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/styles/github.min.css"
    >
    <script defer
            src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
    >
    </script>
    <script defer>
      (function () {
  function normalizeLanguageClasses(el) {
    // Ensure all code blocks have a "language-..." class
    for (const cls of Array.from(el.classList)) {
      if (!cls.startsWith('language-') && /^[a-z0-9_+-]+$/i.test(cls)) {
        el.classList.add('language-' + cls.toLowerCase());
      }
    }
  }

  function collectRequestedLanguages() {
    // Gather unique languages used in the document
    const set = new Set();
    document.querySelectorAll('pre code').forEach(function (el) {
      normalizeLanguageClasses(el);
      const classes = Array.from(el.classList);
      const langClass = classes.find(c => c.startsWith('language-'));
      if (!langClass) return;
      let name = langClass.replace(/^language-/, '').toLowerCase();
      name = name.replace(/-diff$/, '').replace(/^diff-/, '');
      if (name && name !== 'diff') set.add(name);
    });
    return Array.from(set);
  }

  function loadLanguage(name) {
    // Dynamically load a highlight.js language pack
    return new Promise(function (resolve) {
      if (window.hljs && window.hljs.getLanguage && window.hljs.getLanguage(name)) {
        return resolve();
      }
      const script = document.createElement('script');
      script.src = 'https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/languages/' + name + '.min.js';
      script.async = true;
      script.onload = function () { resolve(); };
      script.onerror = function () { resolve(); };
      document.head.appendChild(script);
    });
  }

  function highlightAll() {
    // Apply syntax highlighting to all code blocks
    if (!window.hljs) return;
    if (window.hljs.configure) {
      window.hljs.configure({ ignoreUnescapedHTML: true });
    }
    document.querySelectorAll('pre code').forEach(function (el) {
      try { window.hljs.highlightElement(el); } catch (e) {}
    });
  }

  window.addEventListener('DOMContentLoaded', function () {
    if (!window.hljs) return;
    const langs = collectRequestedLanguages();
    Promise.all(langs.map(loadLanguage)).then(highlightAll);
  });
})();
    </script>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <h1 id="title-of-simple-contentmd"
            class="heading-anchor"
        >
          <a href="#title-of-simple-contentmd"
             class="anchor-link"
             aria-label="Permalink"
          >
            <svg class="anchor-icon"
                 aria-hidden="true"
                 viewbox="0 0 16 16"
                 width="16"
                 height="16"
            >
              <path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 
           4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 
           .751.751 0 0 1 .018-1.042.751.751 0 0 1 
           1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5
           a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25
           a.751.751 0 0 1-1.042-.018.751.751 0 0 1
           -.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 
           2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018
           .751.751 0 0 1 .018 1.042l-1.25 1.25
           a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5
           a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1
           -.018 1.042.751.751 0 0 1-1.042.018
           1.998 1.998 0 0 0-2.83 0l-2.5 2.5
           a1.998 1.998 0 0 0 0 2.83Z">
              </path>
            </svg>
          </a>
          Title of simple-content.md
        </h1>
        <p>
          <a href="docs/file-to-publish.html">
            Relative link to MD in docs directory
          </a>
          <br>
          <a href="/morty-docs/some-repo/docs/file-to-publish.html">
            Root link to MD in docs directory
          </a>
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      April
      2020
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from markdown for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a { color: #337ab7; text-decoration: none; }

.content h1 { font-size: 2.2rem; font-weight: 500; margin: 20px 0 10px; }
.content h2 { font-size: 1.8rem; font-weight: 500; margin: 20px 0 10px; }
.content h3 { font-size: 1.5rem; font-weight: 500; margin: 20px 0 10px; }

.content ul {
  display: block; list-style-type: disc;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px; margin-bottom: 10px;
}
.content ol {
  list-style-type: decimal; display: block;
  margin-block-start: 1em; margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p { margin-bottom: 10px; }

.content img { display: block; max-width: 100%; height: auto; vertical-align: middle; }
.content strong { font-weight: 700; }
.content em { font-style: italic; }

.content blockquote {
  padding: 10px 20px; margin: 0 0 20px; font-size: 17.5px; border-left: 5px solid #eee;
}
.content blockquote p:last-child { margin-bottom: 0; }

.content hr { margin: 20px 0; border: 0; border-top: 1px solid #949494; }

/* ---- Code blocks / inline code ---- */
.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.4;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  overflow-x: auto;
  tab-size: 2;
}
.content code { font-family: Menlo,Monaco,Consolas,"Courier New",monospace; }
.content pre code {
  padding: 0;
  font-size: inherit;
  background-color: transparent;
  border-radius: 0;
  display: block;
}
.content pre code:not(.hljs) { color: #333; } /* fallback before hljs runs */

/* Inline code: neutral unless hljs has themed it */
.content :not(pre) code {
  padding: 2px 4px;
  font-size: 90%;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  border-radius: 4px;
}

/* Default colour/background only if hljs hasn't themed it */
/* The colors of this were wierd before, now they are standard */
.content :not(pre) code:not([class*="language-"]) {
  color: #222222;
  background-color: #F1F1F1;
}

/* Links inside inline code: use link colour */
.content a code {
  color: 337AB7 !important; /* let link be a link colour */
}

/* ---- Tables ---- */
.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}
.content th {
  text-align: left; vertical-align: bottom; border-bottom: 2px solid #ddd;
  font-weight: bold; font-size: 1.2rem; padding: 8px; line-height: 1.42857143;
}
.content td {
  padding: 8px; line-height: 1.42857143; vertical-align: top; border-top: 1px solid #ddd;
}

/* ---- Diff block ---- */
.diff-block .diff-add { background-color: #e6ffed; display: block; white-space: pre; }
.diff-block .diff-remove { background-color: #ffeef0; display: block; white-space: pre; }
.diff-block .diff-neutral { display: block; white-space: pre; }

/* ---- Alerts ---- */
.markdown-alert { padding: .5rem 1rem; margin-bottom: 16px; border-left: .25em solid; border-radius: 6px; background-color: var(--alert-bg, #f6f8fa);}
.markdown-alert p { margin: .5em 0; }
.markdown-alert-title { font-weight: 600; display: flex; align-items: center; margin-bottom: .25rem; color: normal !important; }
.markdown-alert-title svg { margin-right: .5rem; flex-shrink: 0; }

.markdown-alert-note { border-color: #0969da; --alert-bg: #ddf4ff; }
.markdown-alert-tip { border-color: #1a7f37; --alert-bg: #dafbe1; }
.markdown-alert-important { border-color: #8250df; --alert-bg: #fbefff; }
.markdown-alert-warning { border-color: #9a6700; --alert-bg: #fff8c5; }
.markdown-alert-caution { border-color: #cf222e; --alert-bg: #ffebe9; }

.markdown-alert-note    { color: #0969da; }
.markdown-alert-tip     { color: #1a7f37; }
.markdown-alert-important { color: #8250df; }
.markdown-alert-warning { color: #9a6700; }
.markdown-alert-caution { color: #d1242f; }

/* ---- Anchor links ---- */
.heading-anchor { position: relative; }
.heading-anchor .anchor-link {
  position: absolute; left: -24px; top: 50%; transform: translateY(-50%);
  opacity: 0; transition: opacity .15s ease-in-out; color: #000; text-decoration: none;
}
.anchor-icon { display: block; width: 16px; height: 16px; fill: currentColor; }
.heading-anchor:hover .anchor-link { opacity: 1; }
    </style>
    <link rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/styles/github.min.css"
    >
    <script defer
            src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
    >
    </script>
    <script defer>
      (function () {
  function normalizeLanguageClasses(el) {
    // Ensure all code blocks have a "language-..." class
    for (const cls of Array.from(el.classList)) {
      if (!cls.startsWith('language-') && /^[a-z0-9_+-]+$/i.test(cls)) {
        el.classList.add('language-' + cls.toLowerCase());
      }
    }
  }

  function collectRequestedLanguages() {
    // Gather unique languages used in the document
    const set = new Set();
    document.querySelectorAll('pre code').forEach(function (el) {
      normalizeLanguageClasses(el);
      const classes = Array.from(el.classList);
      const langClass = classes.find(c => c.startsWith('language-'));
      if (!langClass) return;
      let name = langClass.replace(/^language-/, '').toLowerCase();
      name = name.replace(/-diff$/, '').replace(/^diff-/, '');
      if (name && name !== 'diff') set.add(name);
    });
    return Array.from(set);
  }

  function loadLanguage(name) {
    // Dynamically load a highlight.js language pack
    return new Promise(function (resolve) {
      if (window.hljs && window.hljs.getLanguage && window.hljs.getLanguage(name)) {
        return resolve();
      }
      const script = document.createElement('script');
      script.src = 'https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.9.0/languages/' + name + '.min.js';
      script.async = true;
      script.onload = function () { resolve(); };
      script.onerror = function () { resolve(); };
      document.head.appendChild(script);
    });
  }

  function highlightAll() {
    // Apply syntax highlighting to all code blocks
    if (!window.hljs) return;
    if (window.hljs.configure) {
      window.hljs.configure({ ignoreUnescapedHTML: true });
    }
    document.querySelectorAll('pre code').forEach(function (el) {
      try { window.hljs.highlightElement(el); } catch (e) {}
    });
  }

  window.addEventListener('DOMContentLoaded', function () {
    if (!window.hljs) return;
    const langs = collectRequestedLanguages();
    Promise.all(langs.map(loadLanguage)).then(highlightAll);
  });
})();
    </script>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <p>
          One line of plain text
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      April
      2020
    </footer>
  </body>
</html>
`;
